--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -19,11 +19,11 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.1"
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.tealium:library:5.5.2'
-    compile 'com.tealium:lifecycle:1.1'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.tealium:library:5.5.2'
+    implementation 'com.tealium:lifecycle:1.1'
 }
