--- a/TealiumSampleApp/android/build.gradle
+++ b/TealiumSampleApp/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.1"
-        minSdkVersion = 16
+        minSdkVersion = 19
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
@@ -32,11 +32,14 @@ allprojects {
         maven {
             url "http://maven.tealiumiq.com/android/releases/"
         }
+        maven {
+            url "http://maven.tealiumiq.com/android/releases/"
+        }
     }
 }
 
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-    distributionUrl = distributionUrl.replace("bin", "all")
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '4.4'
+//    distributionUrl = distributionUrl.replace("bin", "all")
+//}
