--- a/TealiumSampleApp/android/settings.gradle
+++ b/TealiumSampleApp/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'TealiumSampleApp'
 include ':tealium-react-native'
 project(':tealium-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/tealium-react-native/android')
+include ':tealium-react-native'
+project(':tealium-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/tealium-react-native/android')
 
 include ':app'
