--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tealium-react-native",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "A native module for using Tealium's Android and iOS libraries from a React Native app.",
   "main": "index.js",
   "homepage": "https://github.com/Tealium/tealium-react-native",
@@ -20,7 +20,8 @@
     "Karen Tamayo",
     "Jonathan Wong",
     "Craig Rouse",
-    "James Keith"
+    "James Keith",
+    "Christina Sund"
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "devDependencies": {
@@ -31,12 +32,6 @@
     "files": [
       "test/**/*.js"
     ]
-  },
-  "rnpm": {
-    "commands": {
-      "postlink": "node ./node_modules/tealium-react-native/scripts/postlink.js",
-      "preunlink": "node ./node_modules/tealium-react-native/scripts/preunlink.js"
-    }
   },
   "dependencies": {}
 }
