--- a/TealiumSampleApp/android/build.gradle
+++ b/TealiumSampleApp/android/build.gradle
@@ -2,18 +2,17 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.1"
+        buildToolsVersion = "28.0.3"
         minSdkVersion = 19
         compileSdkVersion = 28
         targetSdkVersion = 28
-        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath("com.android.tools.build:gradle:3.4.2")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,18 +22,20 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        google()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
         }
         maven {
             url "http://maven.tealiumiq.com/android/releases/"
         }
-        maven {
-            url "http://maven.tealiumiq.com/android/releases/"
-        }
+
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
-
