--- a/TealiumSampleApp/package.json
+++ b/TealiumSampleApp/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "TealiumSampleApp",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "tealium-react-native": "^1.0.6"
-  },
-  "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.0",
-    "react-test-renderer": "16.6.3"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+    "name": "TealiumSampleApp",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "start": "react-native start",
+        "test": "jest",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "react": "16.9.0",
+        "react-native": "0.61.3",
+        "tealium-react-native": "^1.0.7"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.6.4",
+        "@babel/runtime": "^7.6.3",
+        "@react-native-community/eslint-config": "^0.0.5",
+        "babel-jest": "^24.9.0",
+        "eslint": "^6.6.0",
+        "jest": "^24.9.0",
+        "metro-react-native-babel-preset": "^0.57.0",
+        "react-test-renderer": "16.9.0"
+    },
+    "jest": {
+        "preset": "react-native"
+    }
 }
