--- a/TealiumSampleApp/ios/TealiumSampleApp/Info.plist
+++ b/TealiumSampleApp/ios/TealiumSampleApp/Info.plist
@@ -28,6 +28,8 @@
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
