--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.tealium:library:5.6.2'
-    implementation 'com.tealium:lifecycle:1.1.3'
+    // api 'com.tealium:library:5.7.0'
+    api 'com.tealium:library:5.6.2'
+    api 'com.tealium:lifecycle:1.1.3'
 }
