Added remote command functionality (#42)
* Added remote command functionality

* Updated method name and spacing

* Added type definitions file

* Updated changelog

* Update naming

* Update naming for android

* Made sure all TealiumModule files had updates

* Double check and update necessary files

* callback alternative

* Updated emitter implementation

* Optimize android removeRemoteCommand method

* Share Native Android Libraries

* Updated android version

* Update version in changelog

Co-authored-by: jameskeith <james.keith@tealium.com>

--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -38,6 +38,6 @@ android {
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.tealium:library:5.5.5'
-    implementation 'com.tealium:lifecycle:1.1.2'
+    api 'com.tealium:library:5.7.0'
+    api 'com.tealium:lifecycle:1.1.3'
 }
