--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,8 +1,9 @@
 {
     "name": "tealium-react-native",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "description": "A native module for using Tealium's Android and iOS libraries from a React Native app.",
     "main": "index.js",
+    "types": "index.d.ts",
     "homepage": "https://github.com/Tealium/tealium-react-native",
     "bugs": "https://github.com/Tealium/tealium-react-native/issues",
     "keywords": [
