--- a/TealiumSampleApp/android/app/build.gradle
+++ b/TealiumSampleApp/android/app/build.gradle
@@ -180,7 +180,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.react:react-native:0.20.1'  // From node_modules
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
