--- a/TealiumSampleApp/android/app/gradle/wrapper/gradle-wrapper.properties
+++ b/TealiumSampleApp/android/app/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Jan 27 14:49:42 PST 2020
+#Thu Apr 09 15:26:49 MST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
