--- a/TealiumSampleApp/android/app/build.gradle
+++ b/TealiumSampleApp/android/app/build.gradle
@@ -181,6 +181,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    // api 'com.google.android.gms:play-services-ads:19.2.0' // If AdIdentifier is enabled, add this dependency
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
