--- a/TealiumSampleApp/android/app/src/main/AndroidManifest.xml
+++ b/TealiumSampleApp/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <!--  <meta-data
+             android:name="com.google.android.gms.ads.APPLICATION_ID"
+             android:value="ca-app-pub-XXXXX"/> If AdIdentifier is enabled, enter your pub id here -->
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
