--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'
     api 'com.tealium:library:5.7.0'
     api 'com.tealium:lifecycle:1.1.3'
+    api 'com.tealium:adidentifier:1.0.4'
 }
