--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
+    "react": "^16.8.1",
     "react-native": "0.63.4",
     "tealium-react-native": "../npm-package"
   },
