--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 .AppleDouble
 .LSOverride
 
+# Xcode
+*.xcuserstate
+
 # Icon must end with two \r
 Icon
 
@@ -28,5 +31,16 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Android/IntelliJ
+build/
+.idea
+.gradle
+local.properties
+*.iml
 
-# End of https://www.gitignore.io/api/macos
+# node.js
+node_modules/
+*package-lock.json
+npm-debug.log
+yarn-error.log
+*yarn.lock
