--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -82,6 +82,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 
 /**
  * Set this to true to create two separate APKs instead of one:
