--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -12,9 +12,10 @@ target 'example' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # Workaround for Xcode 12 bug: https://github.com/facebook/react-native/issues/30836#issuecomment-772794044
+  # use_flipper!
+  # post_install do |installer|
+    # flipper_post_install(installer)
+  # end
 end
 
