--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -6,16 +6,24 @@ platform :ios, '10.0'
 target 'example' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
+
+  target 'exampleTests' do
+    inherit! :complete
+    # Pods for testing
+  end
 
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  # Workaround for Xcode 12 bug: https://github.com/facebook/react-native/issues/30836#issuecomment-772794044
-  # use_flipper!
-  # post_install do |installer|
-    # flipper_post_install(installer)
-  # end
-end
+  # you should disable the next line.
+  use_flipper!()
 
+  post_install do |installer|
+    react_native_post_install(installer)
+  end
+end
