Clean up package.json

--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "tealium-react-native": "../npm-package",
-    "yarn": "^1.22.11"
+    "tealium-react-native": "../npm-package"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
