--- a/modules/location/android/build.gradle
+++ b/modules/location/android/build.gradle
@@ -98,13 +98,12 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
 
+    // Tealium React Native
+    implementation project(":tealium-react-native")
+
     //Tealium
     implementation 'com.tealium:kotlin-core:1.3.0'
-    implementation 'com.tealium:kotlin-collect-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-tagmanagement-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-remotecommand-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-lifecycle:1.1.0'
-    implementation 'com.tealium:kotlin-visitor-service:1.1.0'
+    implementation 'com.tealium:kotlin-location:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.ext.kotlinVersion}"
 
     testImplementation 'com.facebook.react:react-native:+'
