--- a/modules/location/android/build.gradle
+++ b/modules/location/android/build.gradle
@@ -10,10 +10,10 @@
 //   original location:
 //   - https://github.com/facebook/react-native/blob/0.58-stable/local-cli/templates/HelloWorld/android/app/build.gradle
 
-def DEFAULT_COMPILE_SDK_VERSION = 28
-def DEFAULT_BUILD_TOOLS_VERSION = '28.0.3'
+def DEFAULT_COMPILE_SDK_VERSION = 30
+def DEFAULT_BUILD_TOOLS_VERSION = '30.0.2'
 def DEFAULT_MIN_SDK_VERSION = 21
-def DEFAULT_TARGET_SDK_VERSION = 28
+def DEFAULT_TARGET_SDK_VERSION = 30
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -25,7 +25,7 @@ apply plugin: 'maven'
 buildscript {
 
     ext {
-        kotlinVersion = '1.3.72'
+        kotlinVersion = '1.4.32'
     }
     // The Android Gradle plugin is only required when opening the android folder stand-alone.
     // This avoids unnecessary downloads and potential conflicts when the library is included as a
@@ -34,7 +34,7 @@ buildscript {
     if (project == rootProject) {
         repositories {
             google()
-            jcenter()
+            mavenCentral()
             maven {
                 url "https://maven.tealiumiq.com/android/releases/"
             }
@@ -91,7 +91,7 @@ repositories {
         url "https://maven.tealiumiq.com/android/releases/"
     }
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
