--- a/modules/location/package.json
+++ b/modules/location/package.json
@@ -35,12 +35,12 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
+    "react": "^16.8.1 || ^17.0.0",
     "react-native": ">=0.60.0-rc.0 <1.0.x",
     "tealium-react-native": "^2.2.0"
   },
   "devDependencies": {
-    "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react": "^17.0.2",
+    "react-native": "^0.67.1"
   }
 }
