Include license file in the npm package

--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -9,6 +9,7 @@
   "bugs": "https://github.com/Tealium/tealium-react-native/issues",
   "files": [
     "README.md",
+    "LICENSE",
     "android",
     "common.ts",
     "index.js",
@@ -29,8 +30,8 @@
     "name": "Tealium"
   },
   "contributors": [
-      "James Keith",
-      "Christina Sund"
+    "James Keith",
+    "Christina Sund"
   ],
   "license": "Commercial",
   "licenseFilename": "LICENSE",
