--- a/modules/location/android/build.gradle
+++ b/modules/location/android/build.gradle
@@ -40,7 +40,7 @@ buildscript {
     }
 }
 
-version = "2.2.0"
+version = "1.0.0"
 android {
     compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
     buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
@@ -50,7 +50,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField "String", "TAG", "\"Tealium-React-$version\""
+        buildConfigField "String", "TAG", "\"Tealium-React-Loc-$version\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
