--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -14,7 +14,8 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec"
+    "tealium-react-native.podspec",
+    "tealium-react-native-swift.podspec"
   ],
   "repository": {
     "type": "git",
@@ -36,11 +37,11 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
+    "react": "^16.8.1 || ^17.0.0",
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
-    "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react": "^17.0.2",
+    "react-native": "^0.67.1"
   }
 }
