--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-native": "0.64.2",
-    "tealium-react-native": "../npm-package"
+    "react": "17.0.2",
+    "react-native": "0.67.1",
+    "react-native-permissions": "^3.2.0",
+    "tealium-react-native": "../npm-package",
+    "tealium-react-native-location": "../modules/location"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
