--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-native",
   "title": "Tealium React Native",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "description": "A native module for using Tealium's Kotlin and Swift libraries.",
   "main": "index.js",
   "types": "*.ts",
@@ -9,12 +9,14 @@
   "bugs": "https://github.com/Tealium/tealium-react-native/issues",
   "files": [
     "README.md",
+    "LICENSE",
     "android",
     "common.ts",
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec"
+    "tealium-react-native.podspec",
+    "tealium-react-native-swift.podspec"
   ],
   "repository": {
     "type": "git",
@@ -36,11 +38,11 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
+    "react": "^16.8.1 || ^17.0.0",
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
-    "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react": "^17.0.2",
+    "react-native": "^0.67.1"
   }
 }
