WIP: Fixing firebase

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -4,12 +4,13 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 
 target 'example' do
+  use_frameworks! :linkage => :static
   config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => true
+    :hermes_enabled => false
   )
 
   permissions_path = '../node_modules/react-native-permissions/ios'
@@ -28,9 +29,9 @@ target 'example' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+ # use_flipper!()
 
-  post_install do |installer|
-    react_native_post_install(installer)
-  end
+  #post_install do |installer|
+   #react_native_post_install(installer)
+  #end
 end
