Added tealium-react-native as peer dependency and updated description of braze remote command

--- a/remotecommands/tealium-react-braze/package.json
+++ b/remotecommands/tealium-react-braze/package.json
@@ -2,7 +2,8 @@
   "name": "tealium-react-braze",
   "title": "Tealium React Braze",
   "version": "1.0.0",
-  "description": "TODO",
+  "description": "Package to support the Tealium Braze Remote Command 
+integration",
   "main": "index.js",
   "files": [
     "README.md",
@@ -31,7 +32,8 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": ">=16.8.1",
-    "react-native": ">=0.60.0-rc.0 <1.0.x"
+    "react-native": ">=0.60.0-rc.0 <1.0.x",
+    "tealium-react-native": "^2.1.0"
   },
   "devDependencies": {
     "react": "^16.9.0",
