--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -1,7 +1,7 @@
-def DEFAULT_COMPILE_SDK_VERSION = 30
+def DEFAULT_COMPILE_SDK_VERSION = 32
 def DEFAULT_BUILD_TOOLS_VERSION = '30.0.3'
 def DEFAULT_MIN_SDK_VERSION = 21
-def DEFAULT_TARGET_SDK_VERSION = 30
+def DEFAULT_TARGET_SDK_VERSION = 32
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -57,6 +57,15 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11
+    }
 }
 
 repositories {
@@ -83,16 +92,16 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
 
     //Tealium
-    implementation 'com.tealium:kotlin-core:1.3.0'
+    implementation 'com.tealium:kotlin-core:1.4.0'
     implementation 'com.tealium:kotlin-collect-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-tagmanagement-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-remotecommand-dispatcher:1.1.0'
-    implementation 'com.tealium:kotlin-lifecycle:1.1.0'
+    implementation 'com.tealium:kotlin-tagmanagement-dispatcher:1.1.2'
+    implementation 'com.tealium:kotlin-remotecommand-dispatcher:1.1.1'
+    implementation 'com.tealium:kotlin-lifecycle:1.1.1'
     implementation 'com.tealium:kotlin-visitor-service:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.ext.kotlinVersion}"
 
     testImplementation 'com.facebook.react:react-native:+'
-    testImplementation 'io.mockk:mockk:1.10.0'
+    testImplementation 'io.mockk:mockk:1.12.0'
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.robolectric:robolectric:4.6.1"
 }
