--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "^16.13.1",
+    "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-material-design": "^0.3.7",
     "react-native-permissions": "^3.2.0",
