Created example project for react 18

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -47,6 +47,12 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
+        maven {
+            url "https://maven.tealiumiq.com/android/releases/"
+        }
+        maven {
+            url "https://appboy.github.io/appboy-android-sdk/sdk"
+        }
         google()
         maven { url 'https://www.jitpack.io' }
     }
