--- a/remotecommands/tealium-react-firebase/package.json
+++ b/remotecommands/tealium-react-firebase/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-firebase",
   "title": "Tealium React Firebase",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Package to support the Tealium Firebase Remote Command integration",
   "main": "index.js",
   "files": [
@@ -25,7 +25,7 @@
   ],
   "author": {
     "name": "Tealium"
-  }, 
+  },
   "contributors": [
     "James Keith",
     "Christina Sund"
@@ -42,7 +42,5 @@
     "react": "^16.9.0",
     "react-native": "^0.61.5"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
