--- a/modules/adobe-visitor/package.json
+++ b/modules/adobe-visitor/package.json
@@ -37,11 +37,13 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": ">=16.8.1 || < 19.0.0",
-    "react-native": ">=0.60.0-rc.0 <1.0.x",
-    "tealium-react-native": "^2.2.0"
+    "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
     "react": "^17.0.2",
     "react-native": "^0.67.1"
+  },
+  "dependencies": {
+    "tealium-react-native": "../../npm-package"
   }
 }
