--- a/modules/adobe-visitor/android/build.gradle
+++ b/modules/adobe-visitor/android/build.gradle
@@ -72,6 +72,7 @@ repositories {
     // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
     url "$rootDir/../node_modules/react-native/android"
   }
+
   maven {
     // Android JSC is installed from npm
     url "$rootDir/../node_modules/jsc-android/dist"
@@ -80,6 +81,7 @@ repositories {
   maven {
     url "https://maven.tealiumiq.com/android/releases/"
   }
+
   google()
   mavenCentral()
 }
@@ -93,6 +95,7 @@ dependencies {
   implementation project(":tealium-react-native")
 
   // Tealium
+  implementation 'com.tealium:kotlin-core:1.5.1'
   implementation 'com.tealium:kotlin-adobe-visitor:1.1.0'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.ext.kotlinVersion}"
