--- a/remotecommands/tealium-react-adjust/package.json
+++ b/remotecommands/tealium-react-adjust/package.json
@@ -38,5 +38,8 @@
   "devDependencies": {
     "react": "^16.9.0",
     "react-native": "^0.61.5"
+  },
+  "dependencies": {
+    "tealium-react-native": "^2.3.0"
   }
 }
