--- a/modules/adobe-visitor/android/src/main/AndroidManifest.xml
+++ b/modules/adobe-visitor/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tealiumreactadobevisitor">
+          package="com.tealium.react.adobevisitor">
 
 </manifest>
