Fixed podspec file name in package.json for adobe module

--- a/modules/adobe-visitor/package.json
+++ b/modules/adobe-visitor/package.json
@@ -15,7 +15,7 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec"
+    "tealium-react-adobe-visitor.podspec"
   ],
   "repository": {
     "type": "git",
