--- a/modules/adobe-visitor/package.json
+++ b/modules/adobe-visitor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-native-adobe-visitor",
   "title": "Tealium React Native Adobe Visitor Service",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A native module for using Tealium's Adobe Visitor Service module for Kotlin and Swift libraries.",
   "main": "index.js",
   "types": "*.ts",
@@ -15,7 +15,7 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec"
+    "tealium-react-adobe-visitor.podspec"
   ],
   "repository": {
     "type": "git",
