--- a/example/package.json
+++ b/example/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.4",
+    "react": "18.2.0",
+    "react-native": "0.71.10",
     "react-native-permissions": "^3.6.1",
     "tealium-react-adjust": "../remotecommands/tealium-react-adjust/",
     "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer/",
     "tealium-react-braze": "../remotecommands/tealium-react-braze/",
-    "tealium-react-firebase": "../remotecommands/tealium-react-firebase/",
+    "tealium-react-firebase": "file:../remotecommands/tealium-react-firebase",
     "tealium-react-native": "../npm-package/",
     "tealium-react-native-location": "../modules/location/"
   },
