Amended getUrlParams method to return dictionary

--- a/example/package.json
+++ b/example/package.json
@@ -17,7 +17,7 @@
     "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer/",
     "tealium-react-braze": "../remotecommands/tealium-react-braze/",
     "tealium-react-firebase": "file:../remotecommands/tealium-react-firebase",
-    "tealium-react-native": "../npm-package/",
+    "tealium-react-native": "../npm-package",
     "tealium-react-native-adobe-visitor": "../modules/adobe-visitor",
     "tealium-react-native-location": "../modules/location/"
   },
