[MT-1342] Target XCode 15 and iOS 12
Update all dependencies
Fix and standardise podspecs
Remove pods warnings
Add missing licenses
Remove Arm64 exclusions

--- a/remotecommands/tealium-react-appsflyer/package.json
+++ b/remotecommands/tealium-react-appsflyer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-appsflyer",
   "title": "Tealium React AppsFlyer",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Package to support the Tealium AppsFlyer Remote Command",
   "main": "index.js",
   "files": [
@@ -27,7 +27,7 @@
   "author": {
     "name": "Tealium"
   },
-  "license": "MIT",
+  "license": "Commercial",
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
