--- a/remotecommands/tealium-react-adjust/package.json
+++ b/remotecommands/tealium-react-adjust/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-adjust",
   "title": "Tealium React Adjust",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Package to support the Tealium Adjust Remote Command",
   "main": "index.js",
   "files": [
@@ -27,7 +27,7 @@
   "author": {
     "name": "Tealium"
   },
-  "license": "MIT",
+  "license": "Commercial",
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
