--- a/remotecommands/tealium-react-braze/package.json
+++ b/remotecommands/tealium-react-braze/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-braze",
   "title": "Tealium React Braze",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Package to support the Tealium Braze Remote Command integration",
   "main": "index.js",
   "files": [
@@ -29,7 +29,7 @@
     "Tyler Rister",
     "James Keith"
   ],
-  "license": "MIT",
+  "license": "Commercial",
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
