--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -61,13 +61,16 @@ android {
         abortOnError false
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
+    def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
+    if(agpVersion < 8) {
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_11
+            targetCompatibility JavaVersion.VERSION_11
+        }
 
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11
+        kotlinOptions {
+            jvmTarget = JavaVersion.VERSION_11
+        }
     }
 }
 
