--- a/remotecommands/tealium-react-adjust/android/build.gradle
+++ b/remotecommands/tealium-react-adjust/android/build.gradle
@@ -58,13 +58,16 @@ android {
     disable 'GradleCompatible'
   }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_11
-    targetCompatibility JavaVersion.VERSION_11
-  }
+  def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
+  if(agpVersion < 8) {
+    compileOptions {
+      sourceCompatibility JavaVersion.VERSION_11
+      targetCompatibility JavaVersion.VERSION_11
+    }
 
-  kotlinOptions {
-    jvmTarget = JavaVersion.VERSION_11
+    kotlinOptions {
+      jvmTarget = JavaVersion.VERSION_11
+    }
   }
 }
 
