--- a/modules/attribution/android/src/main/AndroidManifest.xml
+++ b/modules/attribution/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tealium.react.installreferrerattribution">
+          package="com.tealium.react.attribution">
 </manifest>
