PR fixes + increment core minor version

--- a/modules/moments-api/android/build.gradle
+++ b/modules/moments-api/android/build.gradle
@@ -39,6 +39,8 @@ buildscript {
 version = "1.0.0"
 
 android {
+  namespace "com.tealium.react.momentsapi"
+  
   compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
   buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
 
