--- a/modules/moments-api/android/src/main/AndroidManifest.xml
+++ b/modules/moments-api/android/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tealium.react.momentsapi">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
