Android: re-add package name to Manifest + move namespace under APG version check

--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -63,6 +63,7 @@ android {
 
     def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
     if(agpVersion < 8) {
+        namespace "com.tealium.react"
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_11
             targetCompatibility JavaVersion.VERSION_11
