--- a/npm-package/android/build.gradle
+++ b/npm-package/android/build.gradle
@@ -61,9 +61,12 @@ android {
         abortOnError false
     }
 
-    def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
-    if(agpVersion < 8) {
+    if (project.android.hasProperty("namespace")) {
         namespace "com.tealium.react"
+    }
+
+    def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
+    if(agpVersion < 8) {        
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_11
             targetCompatibility JavaVersion.VERSION_11
