[MT-1668] Firebase Remote Command upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ local.properties
 # node.js
 node_modules/
 package-lock.json
-**/package-lock.json
 npm-debug.log
 yarn-error.log
-*yarn.lock
-**/yarn.lock
+yarn.lock
+google-services.json
+GoogleService-Info.plist
