--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -231,6 +231,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    // Seems AppsFlyer starting from v.6.16 uses some Java 17 features not supported by ProGuard
+    implementation 'com.appsflyer:af-android-sdk:6.15.1'
 }
 
 if (isNewArchitectureEnabled()) {
@@ -265,3 +267,5 @@ def isNewArchitectureEnabled() {
     // - Set an environment variable `ORG_GRADLE_PROJECT_newArchEnabled=true`
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
+
+apply plugin: 'com.google.gms.google-services'
