--- a/remotecommands/tealium-react-firebase/android/build.gradle
+++ b/remotecommands/tealium-react-firebase/android/build.gradle
@@ -40,7 +40,7 @@ buildscript {
     }
 }
 
-version = "1.1.0"
+version = "1.2.0"
 android {
     compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
     buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
@@ -83,7 +83,7 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
 
     implementation project(":tealium-react-native")
-    implementation 'com.tealium.remotecommands:firebase:1.5.0'
+    implementation 'com.tealium.remotecommands:firebase:[1.5.0,2.0)'
     implementation 'com.tealium:remotecommands:1.0.2'
 
     implementation 'com.google.firebase:firebase-analytics:21.5.1'
