Remove tealium-react-native-swift podspec
Use the telium-react-native for both objective C and swift
As it seems to be allowed by newer react native versions

--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -15,8 +15,7 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec",
-    "tealium-react-native-swift.podspec"
+    "tealium-react-native.podspec"
   ],
   "repository": {
     "type": "git",
