Add Facebook Remote Command integration
- Introduced `tealium-react-facebook` package for Facebook Remote Command support.
- Updated `App.js` to initialize `FacebookRemoteCommand`.
- Added necessary files including Android and iOS implementations, along with configuration files.
- Updated `package.json` to include the new dependency.
- Created README and LICENSE files for the new package.

This integration enhances the Tealium React Native library by allowing Facebook remote command functionalities.

--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "tealium-react-adjust": "../remotecommands/tealium-react-adjust",
     "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer",
     "tealium-react-braze": "../remotecommands/tealium-react-braze",
+    "tealium-react-facebook": "../remotecommands/tealium-react-facebook",
     "tealium-react-firebase": "../remotecommands/tealium-react-firebase",
     "tealium-react-native": "../npm-package",
     "tealium-react-native-attribution": "../modules/attribution",
